# Ideate

./: LICENSE  Makefile  README.md  docker-compose.backend.yml  docker-compose.client.yml  docker-compose.controller.yml  docker-compose.database.yml  docker-compose.dev.yml  docker-compose.elk.yml  docker-compose.frontend.yml  docker-compose.ideate-be.yml
services/backend/: Dockerfile  Makefile  pyproject.toml  run.sh
services/backend/alembic/: README.md  env.py
services/backend/api/modules/Auth/: __init__.py  repository.py  routers.py  service.py
services/backend/api/modules/ChatApp/: __init__.py  models.py  repository.py  routers.py  service.py  websocket.py
services/backend/api/modules/PokeGPT/: __init__.py  repository.py  routers.py  service.py  websocket.py
services/backend/api/modules/SSE/: __init__.py  controllers.py  models.py  routers.py
services/backend/api/modules/WebSocket/: __init__.py  routers.py
services/backend/api/server/: main.py
services/backend/api/utils/: repository.py
services/backend/app/core/: logger.py
services/backend/app/models/: log.py
services/backend/config/: settings.py
services/backend/database/: Makefile  alembic.ini
services/backend/database/alembic/: env.py
services/backend/database/alembic/versions/: 01da562068fb_add_chatapp_sessions.py  (+3 more)
services/backend/database/entities/: __init__.py  base.py
services/backend/database/utils/: sqlalchemy_session.py
services/backend/repository/: __init__.py  user_repository.py
services/backend/repository/utils/: repository.py  sqlalchemy_session.py
(+63 files in other folders)
